[package]
name = "jit-rs"
version = "0.1.0"
authors = ["Samrat Man Singh <samrat@nilenso.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "^0.2"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
rand = "0.6"
chrono = "0.4"
lazy_static = "1.2.0"
